--- a/frontpage.html
+++ b/frontpage.html
@@ -25,7 +25,7 @@
         <a href="#" id="login">LOGIN</a>
         <div class="dropdown-content">
             <a href="#">DOCTOR</a>
-            <a href="./Login">PATIENT</a>
+            <a href="Patient.html">PATIENT</a>
             <a href="#">ADMIN</a>
         </div>
     </div>
