--- a/Ourteam.html
+++ b/Ourteam.html
@@ -84,11 +84,11 @@
             Position: Software Engineer 
         And Backend Developer</p></div>
         <div class="team-member">
-            <img src="Nikhil Kumar.jpg" alt="Nikhil Kumar">
+            <img src="Nikhil Kumar.png" alt="Nikhil Kumar">
             
         </div>
         <div class="team-member">
-            <img src="Nikhil.jpg" alt="Nikhil">
+            <img src="Nikhil.png" alt="Nikhil">
         </div>
         <div> <p><h2>Nikhil</h2>
             Position: Software Engineer And Frontend Developer</p></div>
@@ -112,7 +112,7 @@
             Position: Software Engineer And
             Backend Developer</p></div>
         <div class="team-member">
-            <img src="Simran.jpg" alt="Simran">
+            <img src="Simran.png" alt="Simran">
         </div>
     </div>
 </B></i>
