--- a/form2.html
+++ b/form2.html
@@ -6,7 +6,8 @@
 <style>
     body {
         font-family: Arial, sans-serif;
-        background-color: #f5f5f5;
+        background-image: url(https://img.freepik.com/free-vector/green-curve-frame-template-vector_53876-144370.jpg?size=626&ext=jpg);
+        background-size: cover;
     }
     
     h2 {
