new page added welcom.html

--- a/Ourteam.html
+++ b/Ourteam.html
@@ -15,7 +15,7 @@
         }
          @keyframes colorChange {
             from {
-                background-color: #3498db;
+                background-color: #bc80bc;
             }
             to {
                 background-color: #83e73c;
