--- a/frontpage.html
+++ b/frontpage.html
@@ -806,10 +806,10 @@ word-break: break-all;
 </div>
 <div class="rightt">
 
- <div class="b1"> <p> Pre<br> Register</p></div>
-  <div class="b2"><p>Lab <br>Tests</p></div>
+ <a href="login.php"><div class="b1"> <p> Pre<br> Register</p></a></div>
+ <a href="login.php"> <div class="b2"><p>Lab <br>Tests</p></a></div>
   <div class="b3"><p>Our<br> facilities</p></div>
-  <div class="b4"><p>Book an Online <br>Appointment</p></div>
+  <a href="login.php"><div class="b4"><p>Book an Online <br>Appointment</p></a></div>
 
 </div>
 
