--- a/docinterface.html
+++ b/docinterface.html
@@ -20,7 +20,7 @@
     .sidebar  {
         width: 250px;
         height: 100%;
-        background: rgb(46, 80, 143);
+        background: #7FFFD4;
         padding: 30px 0;
         position: fixed;
     }
@@ -95,8 +95,9 @@
         border: none;
     }
     .navbar {
-        background-color: #5366ef;
+        background-color: #7FFFD4;
         overflow: hidden;
+        height: 80px;
     }
     
     .navbar a {
@@ -104,13 +105,13 @@
         display: block;
         color: white;
         text-align: center;
-        padding: 14px 20px;
+        padding: 20px 20px;
         text-decoration: none;
         cursor: pointer;
     }
     
     .navbar a:hover {
-        background-color: #ddd;
+        background-color: #F08A5D;
         color: black;
     }  
     .navbar img{
