--- a/frontpage.html
+++ b/frontpage.html
@@ -604,7 +604,7 @@
       <div class="dropdown">
         <a href="#" id="login">LOGIN</a>
         <div class="dropdown-content">
-            <a href="#">DOCTOR</a>
+            <a href="docinterface.html">DOCTOR</a>
             <a href="login.php">PATIENT</a>
             <a href="#">ADMIN</a>
         </div>
