--- a/welcomedoc.html
+++ b/welcomedoc.html
@@ -97,7 +97,7 @@
         <p><b>DEPARTMENT OF GENERAL SURGERY</b></p>
     
         <div class="interaction-section">
-            <a href="#" class="box1 box">
+            <a href="index.php" class="box1 box">
                 <h2>VIEW APPOINTMENTS</h2>
                 <div class="box1-img"></div>
                 
