doc interface joined

--- a/frontpage.html
+++ b/frontpage.html
@@ -606,7 +606,7 @@
         <div class="dropdown-content">
             <a href="docinterface.html">DOCTOR</a>
             <a href="login.php">PATIENT</a>
-            <a href="#">ADMIN</a>
+            <a href="admin.html">ADMIN</a>
         </div>
     </div>
     <div class="dropdown">
