--- a/admin.html
+++ b/admin.html
@@ -147,7 +147,7 @@
         <ul>
             <li><a href="welcomeadmin.html" target="content"><i class="fas fa-home"></i>Home</a></li>
             <li><a href="doc_registration.php" id="doc-registration-link" target="content"><i class="fas fa-user"></i>REGISTER A DOCTOR </a></li>
-            <li><a href="#" id="view-doctor-link" target="content"><i class="fas fa-user"></i>VIEW DOCTORS</a></li>
+            <li><a href="view_doc.php" id="view-doctor-link" target="content"><i class="fas fa-user"></i>VIEW DOCTORS</a></li>
             <li><a href="#" id="view-appointment-link" target="content"><i class="fas fa-address-card"></i>VIEW OFFLINE APPOINTMENT</a></li>
             <li><a href="#" id="view-telecommunication-appointment-link" target="content"><i class="fas fa-phone-volume"></i>VIEW TELECOMMUNICATION APPOINTMENT</a></li>
             <li><a href="#" id="view-offlinelabtest-link" target="content"><i class="fas fa-user-md"></i>VIEW OFFLINE LAB TEST APPOINTMENTS</a></li>
@@ -187,6 +187,14 @@
             setIframeSrc('welcomedoc.html');
         });
 
+        docregistrationLink.addEventListener("click", function(event) {
+            event.preventDefault();
+            setIframeSrc('doc_registration.php');
+        });
+        viewdoctorLink.addEventListener("click", function(event) {
+            event.preventDefault();
+            setIframeSrc('view_doc.php');
+        });
         viewAppointmentsLink.addEventListener("click", function(event) {
             event.preventDefault();
             setIframeSrc('doc_registration.php');
