--- a/frontpage.html
+++ b/frontpage.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="frontpage.css">
+  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
    <style>* {
@@ -41,7 +41,7 @@
     padding: 10px;
     text-align: center;
     background: linear-gradient(30deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
-    background-size: 600% 600%;
+    <!-- background-size: 600% 600%; -->
     animation: gradientAnimation 10s ease infinite;
  }
  
@@ -61,8 +61,11 @@
  }
  
  .nav {
+   display: flex;
  
  flex-wrap: wrap;
+ justify-content: space-evenly;
+ align-items: center;
   
  }
  
@@ -201,6 +204,7 @@
  .img2 {
     background-image: url(https://st.depositphotos.com/1000128/2158/i/450/depositphotos_21581271-stock-photo-stethoscope-on-laptop-keyboard.jpg);
     background-repeat: no-repeat;
+    background-size: cover;
     
    
  }
@@ -213,7 +217,7 @@
  .img4 {
     background-image: url(https://media.gettyimages.com/id/1312706413/photo/modern-hospital-building.jpg?s=612x612&w=0&k=20&c=oUILskmtaPiA711DP53DFhOUvE7pfdNeEK9CfyxlGio=);
  background-repeat: no-repeat;
- background-size: auto 100%;
+ background-size: cover;
  
  }
  
