--- a/frontpage.html
+++ b/frontpage.html
@@ -812,7 +812,7 @@ word-break: break-all;
 
  <a href="login.php"><div class="b1"> <p> Pre<br> Register</p></a></div>
  <a href="login.php"> <div class="b2"><p>Lab <br>Tests</p></a></div>
-  <div class="b3"><p>Our<br> facilities</p></div>
+ <a href="facility.html"> <div class="b3"><p>Our<br> facilities</p></a></div>
   <a href="login.php"><div class="b4"><p>Book an Online <br>Appointment</p></a></div>
 
 </div>
