--- a/facility.html
+++ b/facility.html
@@ -52,10 +52,12 @@
 
         section h2 {
             margin-top: 0;
+            color: #fff;
         }
 
         section p {
             margin-bottom: 20px;
+            color: #f4f4f4;
         }
 
         .facility {
