--- a/samya.html
+++ b/samya.html
@@ -80,7 +80,7 @@
   <hr>
   <div class="head">
     <form action="/submit_date" method="post" id="dateForm">
-      <h1>Enter Date:</h1>
+      <h1>Select Date:</h1>
       <input placeholder="Enter Appointment Date" type="date" id="AppointmentDate" min="{{a}}" max="{{b}}" 
       required>
       <br><button type="button" onclick="btn()" id="btn11" disabled>BOOK</button>
