joined about us

--- a/frontpage.html
+++ b/frontpage.html
@@ -623,7 +623,7 @@
   </div>
       
       <a  href="#connect-with-us">CONTACT US</a>
-      <a href="#">ABOUT US</a>
+      <a href="facility.html">ABOUT US</a>
       <a href="Ourteam.html">ABOUT PROJECT TEAM</a>
       <div id="google_translate_element"></div>
         
