--- a/frontpage.html
+++ b/frontpage.html
@@ -608,7 +608,7 @@
       <div class="dropdown">
         <a href="#" id="login">LOGIN</a>
         <div class="dropdown-content">
-            <a href="docinterface.html">DOCTOR</a>
+            <a href="doc_login.php">DOCTOR</a>
             <a href="login.php">PATIENT</a>
             <a href="admin.html">ADMIN</a>
         </div>
