--- a/admin.html
+++ b/admin.html
@@ -150,6 +150,7 @@
             <hr><span><br> <li><a href="#" id="view-telecommunication-appointment-link" target="content"><i class="fas fa-phone-volume"></i>VIEW TELECOMMUNICATION APPOINTMENT</a></li></span>
             <hr><span><br> <li><a href="#" id="view-offlinelabtest-link" target="content"><i class="fas fa-user-md"></i>VIEW OFFLINE LAB TEST APPOINTMENTS</a></li></span>
             <hr><span><br> <li><a href="#" id="view-onlinelabtest-link" target="content"><i class="fas fa-prescription-bottle-alt"></i>VIEW HOME LAB TEST BOOKINGS</a></li></span>
+            <hr><span><br> <li><a href="graph.html" id="view-graph-link" target="content"><i class="fas fa-prescription-bottle-alt"></i>GRAPH</a></li></span>
             <hr><span><br> <li><a href="#" id="logout-link" target="content"><i class="fas fa-sign-out-alt"></i>LOGOUT</a></li></span>
         </ul>
     </div>
@@ -205,7 +206,7 @@
 
         viewGraphsLink.addEventListener("click", function(event) {
             event.preventDefault();
-            contentFrame.src = '#';
+            contentFrame.src = 'graph.html';
         });
 
         logoutLink.addEventListener("click", function(event) {
