--- a/PFORM1.html
+++ b/PFORM1.html
@@ -51,9 +51,11 @@
     .btn:hover {
         background-color: #0056b3;
     }
-    #pdfViewer {
-        width: 100%;
-        height: 600px; /* Adjust the height as needed */
+    #preview {
+        margin-top: 20px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
     }
 </style>
 </head>
@@ -90,15 +92,16 @@
             <label for="miscellaneous">Miscellaneous:</label>
             <textarea id="miscellaneous" name="miscellaneous"></textarea>
         </div>
+        <button type="button" class="btn" onclick="previewData()">Preview Data</button>
         <button type="button" class="btn" onclick="generatePDF()">Generate PDF</button>
 
     </form>
 </div>
-<iframe id="pdfViewer" frameborder="0"></iframe>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+<div id="preview"></div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
 <script>
-    function generatePDF() {
+    function previewData() {
         // Capture form data
         const formData = {
             doctorName: document.getElementById('doctorName').value,
@@ -110,24 +113,44 @@
             miscellaneous: document.getElementById('miscellaneous').value
         };
 
-        // Create PDF instance
-        const doc = new jsPDF();
+        // Generate HTML content for preview
+        const previewContent = `
+            <h3>Preview Data</h3>
+            <p><strong>Doctor's Name:</strong> ${formData.doctorName}</p>
+            <p><strong>Patient's Name:</strong> ${formData.patientName}</p>
+            <p><strong>Date of Prescription:</strong> ${formData.date}</p>
+            <p><strong>Diagnosed Disease:</strong> ${formData.diagnosedDisease}</p>
+            <p><strong>Prescribed Treatment:</strong> ${formData.prescribedTreatment}</p>
+            <p><strong>Medicine Advised:</strong> ${formData.medicineAdvised}</p>
+            <p><strong>Miscellaneous:</strong> ${formData.miscellaneous}</p>
+        `;
 
-        // Set content
-        doc.text(20, 20, 'Doctor\'s Name: ' + formData.doctorName);
-        doc.text(20, 30, 'Patient\'s Name: ' + formData.patientName);
-        doc.text(20, 40, 'Date of Prescription: ' + formData.date);
-        doc.text(20, 50, 'Diagnosed Disease: ' + formData.diagnosedDisease);
-        doc.text(20, 60, 'Prescribed Treatment: ' + formData.prescribedTreatment);
-        doc.text(20, 70, 'Medicine Advised: ' + formData.medicineAdvised);
-        doc.text(20, 80, 'Miscellaneous: ' + formData.miscellaneous);
+        // Display preview content
+        document.getElementById('preview').innerHTML = previewContent;
+    }
 
-        // Convert PDF to base64
-        const pdfData = doc.output('datauristring');
+    function generatePDF() {
+        // Get the preview content
+        const previewContent = document.getElementById('preview');
 
-        // Display PDF
-        const pdfViewer = document.getElementById('pdfViewer');
-        pdfViewer.src = pdfData;
+        // Use html2canvas to render the HTML content to canvas
+        html2canvas(previewContent).then(canvas => {
+            // Convert canvas to base64 image data
+            const imgData = canvas.toDataURL('image/png');
+
+            // Calculate PDF height and width based on the canvas
+            const pdfWidth = canvas.width / 2.5;
+            const pdfHeight = canvas.height / 2.5;
+
+            // Create PDF instance
+            const doc = new jsPDF('p', 'mm', [pdfWidth, pdfHeight]);
+
+            // Add image to PDF
+            doc.addImage(imgData, 'PNG', 100, 50, pdfWidth, pdfHeight);      
+
+            // Save PDF
+            doc.save('prescription.pdf');
+        });
     }
 </script>
 
